--- a/documentation/asciidoc/topics/attributes/oc_cmds.adoc
+++ b/documentation/asciidoc/topics/attributes/oc_cmds.adoc
@@ -3,6 +3,7 @@
 :oc_get_secret: oc get secret
 :oc_get_infinispan: oc get infinispan -o yaml
 :oc_get_services: oc get services
+:oc_get_service: oc get services
 
 :oc_apply_cr: oc apply -f
 :oc_apply_cr_custom: oc apply -f my_crd.yaml
