adapted old files to new crd struct

--- a/documentation/asciidoc/topics/cmd_examples/oc_apply_deploy_rbac.adoc
+++ b/documentation/asciidoc/topics/cmd_examples/oc_apply_deploy_rbac.adoc
@@ -1,1 +1,3 @@
-$ {oc_apply_cr} {github_raw}{github_tag}/deploy/rbac.yaml
+$ {oc_apply_cr} {github_raw}{github_tag}/deploy/role.yaml
+$ {oc_apply_cr} {github_raw}{github_tag}/deploy/service_account.yaml
+$ {oc_apply_cr} {github_raw}{github_tag}/deploy/role_binding.yaml
