--- a/documentation/asciidoc/topics/cmd_examples/oc_apply_deploy_crd.adoc
+++ b/documentation/asciidoc/topics/cmd_examples/oc_apply_deploy_crd.adoc
@@ -1,1 +1,2 @@
-$ {oc_apply_cr} {github_raw}{github_tag}/deploy/crd.yaml
+$ {oc_apply_cr} {github_raw}{github_tag}/deploy/crds/infinispan.org_infinispans_crd.yaml
+$ {oc_apply_cr} {github_raw}{github_tag}/deploy/crds/infinispan.org_caches_crd.yaml
