--- a/documentation/asciidoc/topics/proc_creating_sa_tokens.adoc
+++ b/documentation/asciidoc/topics/proc_creating_sa_tokens.adoc
@@ -1,14 +1,18 @@
 [id='creating_sa_tokens-{context}']
 = Creating Service Account Tokens
-Traffic between independent {openshiftshort} installations occurs through a Kubernetes API. {ocp} clusters use tokens to authenticate with and access the API.
+Traffic between independent {openshiftshort} installations occurs through a
+Kubernetes API. {ocp} clusters use tokens to authenticate with and access the
+API.
 
-To enable cross-site replication between {brandname} clusters you must add tokens to the namespace on each site. For example, **LON** needs a secret with the token for **NYC**. **NYC** also needs a secret with the token for **LON**.
+To enable cross-site replication between {brandname} clusters you must add
+tokens to the namespace on each site. For example, **LON** needs a secret with
+the token for **NYC**. **NYC** also needs a secret with the token for **LON**.
 
 .Procedure
 
-. Create service account tokens on each {openshiftshort} instance.
+. Create service accounts on each {openshiftshort} instance.
 +
-For example, on **LON** create a token for **NYC** as follows:
+For example, create a service account on **LON** as follows:
 +
 [source,options="nowrap",subs=attributes+]
 ----
@@ -16,7 +20,17 @@ $ oc create sa lon
 serviceaccount/lon created
 ----
 +
-. Retrieve each service account token.
+. Add the view role to service accounts.
++
+For example, if your {brandname} cluster runs in the "my-xsite" namespace, add
+the view role to the service account on **LON** as follows:
++
+[source,options="nowrap",subs=attributes+]
+----
+$ oc policy add-role-to-user view system:serviceaccount:my-xsite:lon
+----
++
+. Retrieve tokens from each service account.
 +
 The following example shows the service account token for **LON**:
 +
