--- a/documentation/asciidoc/topics/proc_adding_custom_credentials.adoc
+++ b/documentation/asciidoc/topics/proc_adding_custom_credentials.adoc
@@ -1,22 +1,11 @@
 [id='adding_credentials-{context}']
 = Adding Custom Credentials
-Add custom credentials to an authentication secret.
+Configure access to {brandname} cluster endpoints with custom credentials.
 
 .Procedure
 
-. Create an `identities.yaml` file that contains credentials for application
-users and the **operator** user for {ispn_operator}, for example:
-+
-[source,yaml,options="nowrap",subs=attributes+]
-----
-credentials:
-- username: testuser
-  password: testpassword
-- username: operator
-  password: supersecretoperatorpassword
-----
-+
-. Create an authentication secret with `identities.yaml` as follows:
+. Define custom credentials in an `identities.yaml` file.
+. Create an authentication secret from `identities.yaml` as follows:
 +
 [source,options="nowrap",subs=attributes+]
 ----
@@ -31,4 +20,38 @@ your **Infinispan** CR and then apply the changes.
 include::yaml_annotated/cr_auth.yaml[]
 ----
 +
-<1> specifies the authentication secret.
+<1> Specifies the name of the authentication secret that contains your
+credentials.
+
+.Verification
+
+Modifying `spec.security.endpointSecretName` triggers a cluster restart. You
+can watch the {brandname} cluster as {ispn_operator} applies changes:
+
+[source,options="nowrap",subs=attributes+]
+----
+$ {oc_get_pods_w}
+----
+
+When the {brandname} cluster is running, verify your custom credentials as
+follows:
+
+. Open a remote shell to a {brandname} node, for example:
++
+[source,options="nowrap",subs=attributes+]
+----
+$ {kubectl_exec}
+----
+. Check that credentials exist in the `users.properties` file.
++
+[source,options="nowrap",subs=attributes+]
+----
+$ cat {conf_path}/users.properties
+----
++
+. Exit the remote shell.
++
+[source,options="nowrap",subs=attributes+]
+----
+$ exit
+----
