--- a/documentation/asciidoc/titles/stories.adoc
+++ b/documentation/asciidoc/titles/stories.adoc
@@ -15,6 +15,7 @@ include::{stories}/assembly_configuring_authentication.adoc[leveloffset=+1]
 include::{stories}/assembly_encrypting_endpoints.adoc[leveloffset=+1]
 include::{stories}/assembly_setting_up_prometheus.adoc[leveloffset=+1]
 include::{stories}/assembly_connecting_remotely.adoc[leveloffset=+1]
+include::{stories}/assembly_creating_caches.adoc[leveloffset=+1]
 include::{stories}/assembly_monitoring_logs.adoc[leveloffset=+1]
 include::{stories}/assembly_xsite_replication.adoc[leveloffset=+1]
 include::{stories}/assembly_reference.adoc[leveloffset=+1]
