--- a/documentation/asciidoc/topics/attributes/community-attributes.adoc
+++ b/documentation/asciidoc/topics/attributes/community-attributes.adoc
@@ -16,6 +16,7 @@
 :image_resource: infinispan/server:latest
 
 :pv_path: /opt/infinispan/server/data
+:conf_path: /opt/infinispan/server/conf
 
 include::kubectl_cmds.adoc[]
 include::links.adoc[]
@@ -58,15 +59,13 @@ include::links.adoc[]
 :openshiftplatform: Red Hat OpenShift Container Platform
 :ocp: OpenShift Container Platform
 :osweb: OpenShift Web Console
-:datagridservice: Data Grid service
-:cacheservice: Cache service
 
 
 //
 // Cloud services
 //
-:datagridservice: Data Grid service
-:cacheservice: Cache service
+:datagridservice: Data Grid Service
+:cacheservice: Cache Service
 
 //
 // Community attributes
