--- a/documentation/asciidoc/topics/attributes/kubectl_cmds.adoc
+++ b/documentation/asciidoc/topics/attributes/kubectl_cmds.adoc
@@ -15,3 +15,5 @@
 :oc_well_formed: kubectl wait --for condition=wellFormed --timeout=240s infinispan/{example_crd_name}
 
 :oc_create: kubectl create
+
+:kubectl_exec: kubectl exec -it {example_crd_name}-0 -- /bin/bash
