--- a/documentation/asciidoc/topics/attributes/product-attributes.adoc
+++ b/documentation/asciidoc/topics/attributes/product-attributes.adoc
@@ -15,6 +15,7 @@
 :image_resource: infinispan/server:latest
 
 :pv_path: /opt/datagrid/server/data
+:conf_path: /opt/datagrid/server/conf
 
 include::oc_cmds.adoc[]
 include::links.adoc[]
@@ -109,14 +110,12 @@ include::links.adoc[]
 :openshiftplatform: Red Hat OpenShift Container Platform
 :ocp: OpenShift Container Platform
 :osweb: OpenShift Web Console
-:datagridservice: Data Grid service
-:cacheservice: Cache service
 
 //
 // Cloud services
 //
-:datagridservice: Data Grid service
-:cacheservice: Cache service
+:datagridservice: Data Grid Service
+:cacheservice: Cache Service
 
 //
 // Product only OpenShift
