--- a/documentation/asciidoc/stories/assembly_creating_services.adoc
+++ b/documentation/asciidoc/stories/assembly_creating_services.adoc
@@ -1,15 +1,11 @@
 [id='creating_services']
 :context: nodes
-= Creating {brandname} Services
-{brandname} services are stateful applications that provide flexible and robust
-in-memory data storage.
+= Setting Up {brandname} Services
+Use {ispn_operator} to create either {cacheservice} or {datagridservice} nodes.
 
-include::{topics}/con_cache_service.adoc[leveloffset=+1]
-include::{topics}/ref_default_cache_service_config.adoc[leveloffset=+2]
-include::{topics}/con_datagrid_service.adoc[leveloffset=+1]
-include::{topics}/proc_creating_services.adoc[leveloffset=+1]
-include::{topics}/ref_cache_service_crd.adoc[leveloffset=+2]
-include::{topics}/ref_datagrid_service_crd.adoc[leveloffset=+2]
+include::{topics}/con_services.adoc[leveloffset=+1]
+include::{topics}/proc_configuring_service_type.adoc[leveloffset=+1]
+include::{stories}/assembly_configuring_cacheservice.adoc[leveloffset=+1]
 
 // Restore the parent context.
 ifdef::parent-context[:context: {parent-context}]
