--- a/documentation/asciidoc/stories/assembly_creating_caches.adoc
+++ b/documentation/asciidoc/stories/assembly_creating_caches.adoc
@@ -1,7 +1,8 @@
 [id='caches']
 :context: datastore
 = Creating {brandname} Caches
-Add cache definitions that configure how {brandname} stores your data.
+Add cache definitions that configure how {brandname} stores your data. You can
+create caches either through {ispn_operator} or from Hot Rod or REST clients.
 
 include::assembly_creating_caches_dg_service.adoc[leveloffset=+1]
 include::{topics}/proc_creating_caches_cache_service.adoc[leveloffset=+1]
