--- a/documentation/asciidoc/stories/assembly_monitoring_logs.adoc
+++ b/documentation/asciidoc/stories/assembly_monitoring_logs.adoc
@@ -4,7 +4,7 @@
 Set logging categories to different message levels to monitor, debug, and
 troubleshoot {brandname} clusters.
 
-include::{topics}/proc_configure_logging.adoc[leveloffset=+1]
+include::{topics}/proc_configuring_logging.adoc[leveloffset=+1]
 include::{topics}/ref_logging_levels.adoc[leveloffset=+1]
 
 // Restore the parent context.
