--- a/documentation/asciidoc/stories/assembly_reference.adoc
+++ b/documentation/asciidoc/stories/assembly_reference.adoc
@@ -1,9 +1,15 @@
 [id='operator_reference']
 :context: reference
 = Reference
-Find useful information for {brandname} clusters that you create with
+Find information about {brandname} services and clusters that you create with
 {ispn_operator}.
 
+include::{topics}/ref_cacheservice_resources.adoc[leveloffset=+1]
+include::{topics}/ref_datagridservice_resources.adoc[leveloffset=+1]
+//Community includes image
+ifndef::productized[]
+include::{topics}/ref_image_resource.adoc[leveloffset=+1]
+endif::productized[]
 include::{topics}/ref_services.adoc[leveloffset=+1]
 include::{topics}/ref_upgrades.adoc[leveloffset=+1]
 //Product Only
