--- a/documentation/asciidoc/topics/attributes/product-attributes.adoc
+++ b/documentation/asciidoc/topics/attributes/product-attributes.adoc
@@ -9,7 +9,7 @@
 :github_raw: https://raw.githubusercontent.com/infinispan/infinispan-operator/
 :github_tag: master
 
-:example_crd_name: example-rhdatagrid
+:example_crd_name: example-infinispan
 :example_namespace: rhdg-namespace
 
 :image_resource: infinispan/server:latest
