--- a/documentation/asciidoc/topics/proc_restart.adoc
+++ b/documentation/asciidoc/topics/proc_restart.adoc
@@ -1,16 +1,28 @@
 [id='restarting-{context}']
 = Restarting {brandname} Clusters
+Complete the following procedure to restart {brandname} clusters after shutdown.
 
-* Set the value of `spec.replicas` to the same number of nodes that were in the
-cluster before you shut it down.
+.Prerequisites
 
-For example, you shut down a cluster of 6 nodes. When you restart the cluster,
-you must set:
+For {datagridservice} nodes, you must restart clusters with the same number of
+nodes before shutdown. For example, you shut down a cluster of 6 nodes. When
+you restart that cluster, you must specify 6 as the value for `spec.replicas`.
 
+This allows {brandname} to restore the distribution of data across the cluster.
+When all nodes in the cluster are running, you can then add or remove nodes.
+
+You can find the correct number of nodes for {brandname} clusters as follows:
+
+[source,options="nowrap",subs=attributes+]
+----
+$ {oc_get_infinispan} {example_crd_name} -o=jsonpath='{.status.replicasWantedAtRestart}'
+----
+
+.Procedure
+
+* Set the value of `spec.replicas` to the appropriate number of nodes for your cluster, for example:
++
 ----
 spec:
   replicas: 6
 ----
-
-This allows {brandname} to restore the distribution of data across the cluster.
-When all nodes in the cluster are running, you can then add or remove nodes.
