--- a/documentation/asciidoc/stories/assembly_creating_caches_dg_service.adoc
+++ b/documentation/asciidoc/stories/assembly_creating_caches_dg_service.adoc
@@ -1,4 +1,5 @@
-[id='dg_service_caches-{context}']
+[id='dg_service_caches']
+:context: datastore
 = Creating Caches for {datagridservice} Clusters
 You can create caches on {datagridservice} clusters using either
 `infinispan.org` cache configuration templates or from valid XML cache
@@ -15,6 +16,7 @@ include::{topics}/proc_adding_cache_auth_secrets.adoc[leveloffset=+1]
 include::{topics}/proc_using_custom_cache_auth.adoc[leveloffset=+2]
 include::{topics}/proc_creating_caches_templates.adoc[leveloffset=+1]
 include::{topics}/proc_creating_caches_xml.adoc[leveloffset=+1]
+include::{topics}/proc_configuring_cache_stores.adoc[leveloffset=+1]
 
 // Restore the parent context.
 ifdef::parent-context[:context: {parent-context}]
