--- a/documentation/asciidoc/topics/proc_creating_caches_cache_service.adoc
+++ b/documentation/asciidoc/topics/proc_creating_caches_cache_service.adoc
@@ -1,4 +1,4 @@
-[id='cache_service_caches-{context}']
+[id='create_cs_caches-{context}']
 = Creating Caches for {cacheservice} Clusters
 {cacheservice} clusters provide a default cache configuration. You can create multiple caches but only as copies of the default configuration.
 
