--- a/documentation/asciidoc/stories/assembly_creating_caches.adoc
+++ b/documentation/asciidoc/stories/assembly_creating_caches.adoc
@@ -4,7 +4,12 @@
 Add cache definitions that configure how {brandname} stores your data. You can
 create caches either through {ispn_operator} or from Hot Rod or REST clients.
 
-include::assembly_creating_caches_dg_service.adoc[leveloffset=+1]
+include::{topics}/ref_creating_caches_dg_service.adoc[leveloffset=+1]
+include::{topics}/proc_adding_cache_auth_secrets.adoc[leveloffset=+2]
+include::{topics}/proc_using_custom_cache_auth.adoc[leveloffset=+3]
+include::{topics}/proc_creating_caches_templates.adoc[leveloffset=+2]
+include::{topics}/proc_creating_caches_xml.adoc[leveloffset=+2]
+include::{topics}/proc_configuring_cache_stores.adoc[leveloffset=+2]
 include::{topics}/proc_creating_caches_cache_service.adoc[leveloffset=+1]
 include::{topics}/proc_verifying_caches.adoc[leveloffset=+1]
 
