conditionals for operator installation

--- a/documentation/asciidoc/stories/assembly_installing_operator.adoc
+++ b/documentation/asciidoc/stories/assembly_installing_operator.adoc
@@ -5,8 +5,11 @@ Install {ispn_operator} into a {k8s} namespace to create and manage {brandname}
 clusters.
 
 include::{topics}/proc_install_olm.adoc[leveloffset=+1]
+//Community Only
+ifndef::productized[]
 include::{topics}/proc_install_operatorhub.adoc[leveloffset=+1]
 include::{topics}/proc_install_manually.adoc[leveloffset=+1]
+endif::productized[]
 
 // Restore the parent context.
 ifdef::parent-context[:context: {parent-context}]
