ISPN-12140 OS service CA encryption

--- a/documentation/asciidoc/topics/proc_encrypting_endpoints_tls_secret.adoc
+++ b/documentation/asciidoc/topics/proc_encrypting_endpoints_tls_secret.adoc
@@ -27,6 +27,6 @@ $ {oc_apply_cr} tls_secret.yaml
 include::yaml_annotated/cr_tls_secret.yaml[]
 ----
 +
-<1> encrypts traffic to and from {brandname} endpoints.
-<2> configures {brandname} to use secrets that contain encryption certificates.
-<3> names the encryption secret.
+<1> Encrypts traffic to and from {brandname} endpoints.
+<2> Configures {brandname} to use secrets that contain encryption certificates.
+<3> Names the encryption secret.
