--- a/documentation/asciidoc/topics/ref_datagridservice_resources.adoc
+++ b/documentation/asciidoc/topics/ref_datagridservice_resources.adoc
@@ -27,7 +27,7 @@ spec:
   security:
     endpointSecretName: endpoint-identities <6>
     endpointEncryption: <7>
-        type: secret
+        type: Secret
         certSecretName: tls-secret
   container: <8>
     extraJvmOpts: "-XX:NativeMemoryTracking=summary"
