--- a/documentation/asciidoc/stories/assembly_xsite_replication.adoc
+++ b/documentation/asciidoc/stories/assembly_xsite_replication.adoc
@@ -1,15 +1,10 @@
 [id='backup_sites']
 :context: xsite
 = Configuring Cross-Site Replication
-Set up cross-site replication to back up data between {brandname} clusters
-running in different locations.
+Set up global {brandname} clusters to back up data across sites.
 
-For example, you use {ispn_operator} to manage a {brandname} cluster at a
-data center in London, **LON**. At another data center in New York City,
-**NYC**, you also use {ispn_operator} to manage a {brandname} cluster. In
-this case, you can add **LON** and **NYC** as backup locations for each other.
-
-include::{topics}/ref_xsite_mirror_names.adoc[leveloffset=+1]
+include::{topics}/con_xsite_replication.adoc[leveloffset=+1]
+include::{topics}/ref_naming_reqs_backup_locations.adoc[leveloffset=+2]
 //Community
 ifndef::productized[]
 include::{topics}/proc_xsite_manual_clusterrole.adoc[leveloffset=+1]
